--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="ar">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Post Service Gratuity Calculator</title>
+    <title>حاسبة مكافأة نهاية الخدمة</title>
     <link rel="stylesheet" href="styleoo.css">
     <script src="gratuity.js"></script>
 
 </head>
 <body>
     <div class="container">
-        <h1>Post Service Gratuity Calculator</h1>
+        <h1>حاسبة مكافأة نهاية الخدمة</h1>
         <form>
-            <label for="startDate">Start Date:</label>
+            <label for="startDate">تاريخ بداية العمل:</label>
             <input type="date" id="startDate" name="startDate"><br><br>
 
-            <label for="endDate">End Date:</label>
+            <label for="endDate">تاريخ نهاية العمل</label>
             <input type="date" id="endDate" name="endDate"><br><br>
 
-            <label for="lastBasicWage">Last Basic Monthly Salary (OMR):</label>
+            <label for="lastBasicWage">الراتب الشهري الأساسي</label>
             <input type="number" id="lastBasicWage" name="lastBasicWage"><br><br>
 
             <button type="button" onclick="calculateGratuity()">Calculate</button>
@@ -31,8 +31,8 @@
 
     <footer>
         <div class="container">
-            <p>According to the article 39 of Omani labor law 35/2003</p>
-            <p>© Azzan Alkamali 2023</p>
+            <p>وفقاً لنص المادة (39) من قانون العمل العماني 35/2003</p>
+            <p>© عزان الكمالي 2023</p>
         </div>
     </footer>
 
