--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <label for="lastBasicWage">الراتب الشهري الأساسي</label>
             <input type="number" id="lastBasicWage" name="lastBasicWage"><br><br>
 
-            <button type="button" onclick="calculateGratuity()">Calculate</button>
+            <button type="button" onclick="calculateGratuity()">احسب</button>
         </form>
 
         <div id="result">
