--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
             <p id="gratuityAmount"></p>
             <p id="gratuityDescription"></p>
         </div>
+
+        <footer>
+            <p>وفقاً لنص المادة (٣٩) من قانون العمل العماني ٣٥/٢٠٠٣</p>
+            <p>حقوق النشر © عزان الكمالي</p>
+        </footer>
     </div>
-
-
 </body>
 </html>
