--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <footer>
             <p>وفقاً لنص المادة (٣٩) من قانون العمل العماني ٢٠٠٣/٣٥</p>
-            <p>© عزان الكمالي</p>
+            <p>عزان الكمالي ©</p>
         </footer>
     </div>
 </body>
