--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1>حاسبة مكافأة نهاية الخدمة</h1>
         <form>
-            <label for="startDate">تاريخ بداية العمل</label>
+            <label for="startDate">تاريخ بدء العمل</label>
             <input type="date" id="startDate" name="startDate"><br><br>
 
             <label for="endDate">تاريخ نهاية العمل</label>
