--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 </head>
 <body>
+    <button id="languageButton" onclick="changeLanguage()">English</button>
     <div class="container">
         <h1>حاسبة مكافأة نهاية الخدمة</h1>
         <form>
