--- a/en.html
+++ b/en.html
@@ -31,7 +31,7 @@
 
         <footer>
             <p>according to article (39) of Omani labor law 35/2003</p>
-            <p>© Azzan Alkamali</p>
+            <p>© Judge. Azzan Alkamali</p>
         </footer>
     </div>
 </body>
