--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <footer>
             <p>وفقاً لنص المادة (٣٩) من قانون العمل العماني ٢٠٠٣/٣٥</p>
-            <p>عزان الكمالي ©</p>
+            <p>القاضي/ عزان الكمالي ©</p>
         </footer>
     </div>
 </body>
